--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<VBox alignment="CENTER" prefHeight="319.0" prefWidth="625.0" spacing="1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="word_counter_javafx.Controller">
+<VBox alignment="CENTER" spacing="1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="word_counter_javafx.Controller">
    <children>
       <HBox alignment="CENTER" VBox.vgrow="NEVER">
          <children>
